--- a/hw01/index.html
+++ b/hw01/index.html
@@ -178,8 +178,28 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/vis2023f/hw<span style="color:red;">01</span>/src/ 檔案夾。
+      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw01/src'" value="開啟 hw1 src"> 
     </div>
+  </div>
+
+   <!-- ------------------------------------------------>
+   <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <h4>Demo 網頁</h4>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <a href="https://Kiri487.github.io/vis2023f/hw01/src/src-easy/">Simple baseline</a>
+      <hr>
+      <a href="https://Kiri487.github.io/vis2023f/hw01/src/src-medium-v3/">Medium baseline - v3</a>   
+      <hr>
+      <a href="https://Kiri487.github.io/vis2023f/hw01/src/src-medium-v7/">Medium baseline - v7</a>   
+      <hr>
+      <a href="https://Kiri487.github.io/vis2023f/hw01/src/src-strong/">Strong baseline</a>
+      </div>
   </div>
 
   <!-- ------------------------------------------------>
@@ -201,75 +221,120 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td>Simple baseline - 產生 Dummy CSV 虛構成績表</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td id='m2'>3</td>
+          <td>Medium baseline - 繪製 v3 蘋果成績表</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td id='m3'>3</td>
+          <td>Medium baseline - 繪製 v7 蘋果成績表</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
+          <td id='m4'>2</td>
+          <td>Strong baseline - 繪製 v7 創新成績表，參考D3畫廊，修改範例，推出創新成績表</td>
         </tr>
       </table>
     </div>
   </div>
 
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
-    </div>
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+     <h4>Simple baseline - 產生 Dummy CSV 虛構成績表</h4>
   </div>
+</div>
 
-  <!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
+  src="./src-easy/index.html"></iframe>
+  </div>
+</div>
 
-  <!-- ------------------------------------------------>
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+     <h4>Medium baseline - 繪製 v3 蘋果成績表</h4>
+  </div>
+</div>
 
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
+  src="./src-medium-v3/index.html"></iframe>
+  </div>
+</div>
 
-<script>
-  $(function() {
-    var f = function() {
-      $(this).next().text($(this).is(':checked') ? '做完' : '未做完');
-    };
-    $('input').change(f).trigger('change');
-  });
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+     <h4>Medium baseline - 繪製 v7 蘋果成績表</h4>
+  </div>
+</div>
 
-  d3.select("#myCheckbox1").on("change",update);
-  d3.select("#myCheckbox2").on("change",update);
-  d3.select("#myCheckbox3").on("change",update);
-  d3.select("#myCheckbox4").on("change",update);
-  d3.select("#myCheckbox5").on("change",update);
-  d3.select("#myCheckbox6").on("change",update);
-  d3.select("#myCheckbox7").on("change",update);
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
+  src="./src-medium-v7/index.html"></iframe>
+  </div>
+</div>
 
-  update();
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+     <h4>Strong baseline - 繪製 v7 創新成績表，參考D3畫廊，修改範例，推出創新成績表</h4>
+  </div>
+</div>
+
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
+  src="./src-strong/index.html"></iframe>
+  </div>
+</div>
+
+<!-- ------------------------------------------------>
+
+  <script>
+    $(function() {
+      var f = function() {
+        $(this).next().text($(this).is(':checked') ? '做完' : '未做完');
+      };
+      $('input').change(f).trigger('change');
+    });
   
-  function update(){
-
-    var score = 0;
-
-    if (d3.select("#myCheckbox1").property("checked")){
-      score += parseInt(d3.select('#m1').html());
-    }
-
-    if (d3.select("#myCheckbox2").property("checked")){
-      score += parseInt(d3.select('#m2').html());   
-    }
-
-    if (d3.select("#myCheckbox3").property("checked")){
-      score += parseInt(d3.select('#m3').html());   
-    }
-
-    d3.select("#myTotal").html(score);    
-  }
-</script>
+    d3.select("#myCheckbox1").on("change",update);
+    d3.select("#myCheckbox2").on("change",update);
+    d3.select("#myCheckbox3").on("change",update);
+    d3.select("#myCheckbox4").on("change",update);
+  
+    update();
+    
+    function update(){
+      var score = 0;
+  
+      if (d3.select("#myCheckbox1").property("checked")){
+        score += parseInt(d3.select('#m1').html());
+      }
+      if (d3.select("#myCheckbox2").property("checked")){
+        score += parseInt(d3.select('#m2').html());   
+      }
+      if (d3.select("#myCheckbox3").property("checked")){
+        score += parseInt(d3.select('#m3').html());   
+      }
+      if (d3.select("#myCheckbox4").property("checked")){
+        score += parseInt(d3.select('#m4').html());
+      }
+      d3.select("#myTotal").html(score);    
+      }
+  </script>
 
 </body>
 </html>
