[feat] Complete hw01 medium baseline-v3

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -178,7 +178,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw01/src'" value="開啟 hw1 src"> 
+      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw01'" value="開啟 hw1 src"> 
     </div>
   </div>
 
@@ -226,7 +226,7 @@
           <td>Simple baseline - 產生 Dummy CSV 虛構成績表</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>3</td>
           <td>Medium baseline - 繪製 v3 蘋果成績表</td>
         </tr>
