[feat] Complete hw01 strong baseline

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,7 +205,9 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      在隨機產生名字的我原先也是以隨機在中文字 Unicode 範圍挑字來實作，但後來越看越不順眼，索性建了一個百家姓的陣列以及一個含有 500 個常用字的陣列，產生出的名字才比較像正常人的名字。<br>
+      在瀏覽 D3 畫廊時，一看到 Ridgeline plot 就覺得也許可以利用學生作業的分數高低，來創造類似山脈的視覺效果，最後我將作業分數轉為每位學生分數山的高低起伏，並且以總分的不同顯示不同顏色的山脈。<br>
+      若學生數夠多，我覺得 Ridgeline plot 呈現出來的效果就很不錯，真的很有一座一座山脈的感覺！
     </div>
   </div>
 
@@ -236,9 +238,9 @@
           <td>Medium baseline - 繪製 v7 蘋果成績表</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
           <td id='m4'>2</td>
-          <td>Strong baseline - 繪製 v7 創新成績表，參考D3畫廊，修改範例，推出創新成績表</td>
+          <td>Strong baseline - 繪製 v7 創新成績表，參考 D3 畫廊，修改範例，推出創新成績表</td>
         </tr>
       </table>
     </div>
@@ -296,7 +298,7 @@
 <div class="row hw12">
   <div class="col-md-12 twenty">
     <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
-  src="./src-strong/index.html"></iframe>
+  src="https://observablehq.com/embed/1f6d72186d620653?cell=*"></iframe>
   </div>
 </div>
 
