[modify] Modify hw01 index.html

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,10 +205,9 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      在隨機產生名字的我原先也是以隨機在中文字 Unicode 範圍挑字來實作，但後來越看越不順眼，索性建了一個百家姓的陣列以及一個含有 500 個常用字的陣列，產生出的名字才比較像正常人的名字。<br>
-      在瀏覽 D3 畫廊時，一看到 Ridgeline plot 就覺得也許可以利用學生作業的分數高低，來創造類似山脈的視覺效果，最後我將作業分數轉為每位學生分數山的高低起伏，並且以總分的不同顯示不同顏色的山脈。<br>
+      在隨機產生名字的部分，我原先也是以隨機在中文字 Unicode 範圍挑字來實作，但後來越看越不順眼，索性建了一個百家姓的陣列以及一個含有 500 個常用字的陣列，產出的名字才比較像正常人的名字。<br>
+      瀏覽 D3 畫廊時，一看到 Ridgeline plot 就覺得也許可以利用數值的高低，來創造類似山脈的視覺效果，最後我將作業分數轉為每位學生分數山的高低起伏，並且以總分的不同顯示不同顏色的山脈。<br>
       若學生數夠多，我覺得 Ridgeline plot 呈現出來的效果就很不錯，真的很有一座一座山脈的感覺！<br>
-      若是 Iframe 的圖表沒有正常跑出來，再麻煩助教直接到 Demo 網頁或 Observable 看，非常感謝。
     </div>
   </div>
 
@@ -299,7 +298,7 @@
 <div class="row hw12">
   <div class="col-md-12 twenty">
     <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
-  src="https://observablehq.com/embed/1f6d72186d620653?cell=*"></iframe>
+  src="./src-strong/index.html"></iframe>
   </div>
 </div>
 
