--- a/hw01/src-strong/index.html
+++ b/hw01/src-strong/index.html
@@ -1,14 +1,139 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>HW1 Strong baseline (2pt)</title>
-<link rel="stylesheet" type="text/css" href="./inspector.css">
+<html>
+<head>
+    <title>HW1 Strong baseline (2pt)</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        body {
+            padding: 10px;
+        }
+    </style>
+</head>
 <body>
-<script type="module">
+    <h1>HW1 Strong baseline (2pt)</h1>
+    <a href="https://observablehq.com/@d3/ridgeline-plot?intent=fork">Reference: D3 - gallery Ridgeline plot</a>
+    <h2>Data Visualization 成績</h2>
+    <div id="score-table"></div>
+    <div id="student-table"></div>
+    <script>
+        let data;
+        let homeworks = ["作業一", "作業二", "作業三", "作業四", "作業五", "作業六", "作業七", "作業八", "作業九", "作業十"];
+        let studentArray = [];
+        
+        d3.csv("../studentTable.csv").then(function(_data) {
+            data = _data;
+        
+            studentArray.length = 0;
+            data.forEach(row => {
+                let Class = row["班級"];
+                let Id = row["學號"];
+                let Name = row["姓名"];
+                for (let i = 0; i < 10; i++) {
+                    studentArray.push({
+                        Class: Class,
+                        ID: Id,
+                        Name: Name,
+                        HW: i + 1,
+                        value: row[homeworks[i]]
+                    });
+                }
+            });
+        });
 
-import define from "./index.js";
-import {Runtime, Library, Inspector} from "./runtime.js";
+        let svg = d3.select("#score-table").append("svg")
+            .attr("width", 1000)
+            .attr("height", 100)
+            .attr("transform", "translate(5, 0)");
 
-const runtime = new Runtime();
-const main = runtime.module(define, Inspector.into(document.body));
+        let xScale = d3.scaleLinear()
+            .domain([0, 100])
+            .range([5, 900]);
 
-</script>
+        let colorScale = d3.scaleSequential()
+            .domain([0, 100])
+            .interpolator(d3.interpolateBuGn);
+
+        svg.selectAll("rect")
+            .data(d3.range(100))
+            .enter()
+            .append("rect")
+            .attr("x", function(d) { return xScale(d); })
+            .attr("y", 0)
+            .attr("width", xScale(1))
+            .attr("height", 50)
+            .attr("fill", function(d) { return colorScale(d); });
+
+        let xAxis = d3.axisBottom(xScale);
+        svg.append("g")
+            .attr("transform", "translate(0," + 50 + ")")
+            .call(xAxis);
+
+        svg.append("text")
+            .attr("transform", "translate(" + 450 + " ," + 100 + ")")
+            .style("text-anchor", "middle")
+            .text("Total Score");
+
+        let HWs = Array.from(d3.group(studentArray, d => + d.HW).keys()).sort(d3.ascending);
+        let series = d3.groups(studentArray, d => d.Name).map(([Name, values]) => {
+            let value = new Map(values.map(d => [+d.HW, d.value]));
+            return {name: `${values[0].Class} ${values[0].ID} ${Name}`, values: HWs.map(d => value.get(d))};
+        });
+        let totalScores = series.map(d => d3.sum(d.values));
+
+        let overlap = 5;
+        let width = 1200;
+        let height = 3000;
+        let marginTop = 100;
+        let marginBottom = 30;
+        let marginRight = 30;
+        let marginLeft = 120;
+
+        let x = d3.scaleLinear()
+            .domain([1, 10])
+            .range([marginLeft, width - marginRight]);
+
+        let y = d3.scalePoint()
+            .domain(series.map(d => d.name))
+            .range([marginTop, height - marginBottom]);
+
+        let z = d3.scaleLinear()
+            .domain([0, d3.max(series, d => d3.max(d.values))]).nice()
+            .range([0, -overlap * y.step() * 0.5])
+
+        let area = d3.area()
+            .curve(d3.curveBasis)
+            .defined(d => !isNaN(d))
+            .x((d, i) => x(HWs[i]))
+            .y0(0)
+            .y1(d => z(d));
+
+        let svg2 = d3.select("student-table").append("svg2")
+            .attr("width", width)
+            .attr("height", height)
+            .attr("viewBox", [0, 0, width, height])
+            .attr("style", "max-width: 100%; height: auto;");
+
+        svg2.append("g")
+            .attr("transform", `translate(0,${height - marginBottom})`)
+            .call(d3.axisBottom(x)
+                .ticks(10)
+                .tickFormat(d => homeworks[d - 1])
+                .tickSizeOuter(0));
+
+        svg2.append("g")
+            .attr("transform", `translate(${marginLeft},0)`)
+            .call(d3.axisLeft(y).tickSize(0).tickPadding(4))
+            .call(g => g.select(".domain").remove());
+
+        let group = svg2.append("g")
+            .selectAll("g")
+            .data(series)
+            .join("g")
+            .attr("transform", d => `translate(0,${y(d.name) + 1})`);
+
+        group.append("path")
+            .attr("fill", (d, i) => d3.interpolateBuGn(totalScores[i] / 100))
+            .attr("d", d => area(d.values));
+        </script>
+</body>
+</html>
