[fix] Fixed chart display problem

--- a/hw01/src-strong/index.html
+++ b/hw01/src-strong/index.html
@@ -107,7 +107,7 @@
             .y0(0)
             .y1(d => z(d));
 
-        let svg2 = d3.select("student-table").append("svg2")
+        let svg2 = d3.select("#student-table").append("svg")
             .attr("width", width)
             .attr("height", height)
             .attr("viewBox", [0, 0, width, height])
