[modify] Modify index.html css style

--- a/hw01/src-strong/index.html
+++ b/hw01/src-strong/index.html
@@ -4,6 +4,10 @@
     <title>HW1 Strong baseline (2pt)</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
+        h2 {
+            margin: 10px;
+        }
+        
         body {
             padding: 10px;
         }
@@ -11,7 +15,7 @@
 </head>
 <body>
     <h1>HW1 Strong baseline (2pt)</h1>
-    <a href="https://observablehq.com/@d3/ridgeline-plot?intent=fork">Reference: D3 - gallery Ridgeline plot</a>
+    <a href="https://observablehq.com/@d3/ridgeline-plot?intent=fork">Reference: D3 - gallery Ridgeline plot</a><br><br>
     <h2>Data Visualization 成績</h2>
     <div id="score-table"></div>
     <div id="student-table"></div>
