[feat] Complete hw04

--- a/hw04/src-sunburst/index.html
+++ b/hw04/src-sunburst/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HW4 Simple / Medium baseline (7pt)</title>
+<title>HW4 Simple baseline (3pt) / Medium baseline (4pt)</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
 <script type="module">
