--- a/hw04/index.html
+++ b/hw04/index.html
@@ -201,7 +201,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次的作業要將問卷中的兩個問題以旭日圖的方式呈現，這種圖表能夠表達出層級關係，讓觀者可以更清楚的了解圖表內容，感覺就像是加強版的圓餅圖。<br>
+      旭日圖的實作方式頗為複雜，因此在此作業我大量參考了助教的範例程式碼，但仍有努力把每個部份搞懂，並且了解每個區塊的作用。
     </div>
   </div>
 
@@ -237,7 +238,7 @@
           <td>Medium baseline 2 - 完成結論</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox5"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked></td>
           <td id='m5'>3</td>
           <td>Strong baseline - 將兩個問題之間的意義以圖表呈現（可互動）</td>
         </tr>
@@ -254,8 +255,8 @@
   
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
-  src="https://observablehq.com/embed/ef52dc9bc1086bcc@226?cell=*"></iframe>
+      <iframe width="100%" height="1000" frameborder="0" style="background-color: #FFFFFF"
+  src="https://observablehq.com/embed/ef52dc9bc1086bcc?cell=*"></iframe>
     </div>
   </div>
 
@@ -268,7 +269,8 @@
   
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      
+      <iframe width="100%" height="1000" frameborder="0" style="background-color: #FFFFFF"
+  src="https://observablehq.com/embed/ebd8ef7e5f335baa?cell=*"></iframe>
     </div>
   </div>
 
