--- a/hw03/index.html
+++ b/hw03/index.html
@@ -178,8 +178,26 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/vis2023f/hw<span style="color:red;">03</span>/src/ 檔案夾。
+      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw03'" value="開啟 hw3 src"> 
     </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <h4>Demo 網頁</h4>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <a href="https://Kiri487.github.io/vis2023f/hw03/src/simple/">Simple baseline</a>
+      <hr>
+      <a href="https://Kiri487.github.io/vis2023f/hw03/src/medium/">Medium baseline</a>   
+      <hr>
+      <a href="https://Kiri487.github.io/vis2023f/hw03/src/strong/">Strong baseline</a>
+      </div>
   </div>
 
   <!-- ------------------------------------------------>
@@ -202,33 +220,54 @@
         <tr>
           <td rowspan="7" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td id='m1'>1</td>
+          <td>Simple baseline - 播放自己的參訪路徑 (1pt)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td id='m2'>2</td>
+          <td>Simple baseline - 計算自己的移動距離 / 卡路里 (2pt)</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td id='m3'>3</td>
+          <td>Medium baseline - 美術館樓層平面圖行走軌跡 (3pt)</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
+          <td id='m4'>4</td>
+          <td>Strong baseline - 建立課程學生居住縣市人數的面量圖 Choropleth (4pt)</td>
         </tr>
       </table>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+      <iframe width="100%" height="1200" frameborder="0" style="background-color: #FFFFFF"
+    src="./src/simple/index.html"></iframe>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <iframe width="100%" height="1200" frameborder="0" style="background-color: #FFFFFF"
+    src="./src/medium/index.html"></iframe>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <iframe width="100%" height="1200" frameborder="0" style="background-color: #FFFFFF"
+    src="./src/strong/index.html"></iframe>
+    </div>
+  </div>
 
   <!-- ------------------------------------------------>
 
@@ -265,6 +304,10 @@
 
     if (d3.select("#myCheckbox3").property("checked")){
       score += parseInt(d3.select('#m3').html());   
+    }
+
+    if (d3.select("#myCheckbox4").property("checked")){
+      score += parseInt(d3.select('#m4').html());   
     }
 
     d3.select("#myTotal").html(score);    
