[feat] Complete hw03 strong baseline

--- a/hw03/index.html
+++ b/hw03/index.html
@@ -234,7 +234,7 @@
           <td>Medium baseline - 美術館樓層平面圖行走軌跡 (3pt)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
           <td id='m4'>4</td>
           <td>Strong baseline - 建立課程學生居住縣市人數的面量圖 Choropleth (4pt)</td>
         </tr>
@@ -264,8 +264,8 @@
 
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <iframe width="100%" height="1200" frameborder="0" style="background-color: #FFFFFF"
-    src="./src/strong/index.html"></iframe>
+      <iframe width="100%" height="900" frameborder="0" style="background-color: #FFFFFF"
+    src="https://observablehq.com/embed/9d2142a7ff314736?cell=*"></iframe>
     </div>
   </div>
 
