[feat] Complete hw03 simple & medium baseline

--- a/hw03/src/medium/index.html
+++ b/hw03/src/medium/index.html
@@ -10,41 +10,48 @@
     <header>
         <h1>HW3 Medium baseline (3pt)</h1>
     </header>
+    <div id="info">
+        <p id="distance-info"></p>
+        <p id="time-info"></p>
+        <p id="calories-info"></p>
+    </div>
     <div class="floors-plan">
-        <div id="floor1" class="floor-plan">
+        <div id="floor-1F" class="floor-plan">
+            <div id="icon"></div>
+            <div id="trace-container"></div>
             <p>師大美術館 1 樓展廳</p>
             <img id="img-1F" src="../img/1F.svg">
-            <div>
+            <div class="floor-plan-checkbox">
                 <input type="checkbox" id="checkbox-1F" onclick="changeFloorSVG(this)">
                 <label for="checkbox-1F">
                     顯示 1 樓展廳詳細資訊
                 </label>
             </div>
         </div>
-        <div id="floor2" class="floor-plan">
+        <div id="floor-2F" class="floor-plan">
             <p>師大美術館 2 樓展廳</p>
             <img id="img-2F" src="../img/2F.svg">
-            <div>
+            <div class="floor-plan-checkbox">
                 <input type="checkbox" id="checkbox-2F" onclick="changeFloorSVG(this)">
                 <label for="checkbox-2F">
                     顯示 2 樓展廳詳細資訊
                 </label>
             </div>
         </div>
-        <div id="floor3" class="floor-plan">
+        <div id="floor-3F" class="floor-plan">
             <p>師大美術館 3 樓展廳</p>
             <img id="img-3F" src="../img/3F.svg">
-            <div>
+            <div class="floor-plan-checkbox">
                 <input type="checkbox" id="checkbox-3F" onclick="changeFloorSVG(this)">
                 <label for="checkbox-3F">
                     顯示 3 樓展廳詳細資訊
                 </label>
             </div>
         </div>
-        <div id="floor4" class="floor-plan">
+        <div id="floor-4F" class="floor-plan">
             <p>師大美術館 4 樓展廳</p>
             <img id="img-4F" src="../img/4F.svg">
-            <div>
+            <div class="floor-plan-checkbox">
                 <input type="checkbox" id="checkbox-4F" onclick="changeFloorSVG(this)">
                 <label for="checkbox-4F">
                     顯示 4 樓展廳詳細資訊
@@ -52,4 +59,6 @@
             </div>
         </div>
     </div>
+    
+    <script src="../js/pathTrace.js"></script>
 </html>
