--- a/hw03/index.html
+++ b/hw03/index.html
@@ -203,7 +203,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次的作業要呈現自己在美術館參訪的軌跡，還蠻酷的。<br>
+      個人覺得人物 icon 搭配軌跡點點這個組合，或許能以不同的元素來增加趣味性，因此我在呈現行走軌跡的部分，私心把人物 icon 換成了一隻拿著綠色楓葉的貓咪，並讓他走過的地方都會掉落一片綠色楓葉。
     </div>
   </div>
 
@@ -219,17 +220,17 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>1</td>
           <td>Simple baseline - 播放自己的參訪路徑 (1pt)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>2</td>
           <td>Simple baseline - 計算自己的移動距離 / 卡路里 (2pt)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>3</td>
           <td>Medium baseline - 美術館樓層平面圖行走軌跡 (3pt)</td>
         </tr>
@@ -246,7 +247,7 @@
 
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <iframe width="100%" height="1200" frameborder="0" style="background-color: #FFFFFF"
+      <iframe width="100%" height="1370" frameborder="0" style="background-color: #FFFFFF"
     src="./src/simple/index.html"></iframe>
     </div>
   </div>
