--- a/hw08/index.html
+++ b/hw08/index.html
@@ -185,7 +185,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次的作業讓我了解到原來資料能夠以 3D 的方式呈現，還蠻酷的！Simple baseline　與  Medium baseline 也讓我更熟悉該怎麼看 3D 的圖表。<br>
+      不過說實話，我覺得有些資料還是以 2D 圖表呈現會最容易理解，但不可否認的是，用 3D 圖表呈現是個創新又有趣的想法。
     </div>
   </div>
 
@@ -303,7 +304,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <source src="" type="video/mp4">
       </video>
     </div>
   </div>
