[feat] Complete hw08 strong baseline

--- a/hw08/index.html
+++ b/hw08/index.html
@@ -222,12 +222,12 @@
           <td>Medium baseline - 觀察主題遊的資料集回答問題</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox5"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked></td>
           <td id='m5'>2</td>
           <td>Strong baseline - 參考執行檔製作出自己的虛擬可視化圖表</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox6"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked></td>
           <td id='m6'>1</td>
           <td>Strong baseline - 成功讀取有氧漫遊、主題遊資料並呈現</td>
         </tr>
@@ -303,9 +303,18 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
+      <p>
+        實作了 Medium baseline 的最後一個問題的想法，圖表中：<br>
+        x 軸為作品編號<br>
+        y 軸為每個作品被完成（成功找到）的次數<br>
+        z 軸為尋找每個作品所花的平均時間（分鐘）
+      </p>
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="" type="video/mp4">
+        <source src="./src/strong/demo.mp4" type="video/mp4">
       </video>
+      <img src="./src/strong/demoPic1.JPG" style="height: 60vh;">
+      <img src="./src/strong/demoPic2.JPG" style="height: 60vh;">
+      <img src="./src/strong/demoPic3.JPG" style="height: 60vh;">
     </div>
   </div>
 
