[feat] Added hw10 feedback

--- a/hw10/index.html
+++ b/hw10/index.html
@@ -171,51 +171,100 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 10</h1>
+      <h1>作業 10 (期末小組作業)</h1>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/vis2023f/hw<span style="color:red;">10</span>/src/ 檔案夾。
+      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw10/src'" value="開啟 hw10 src"> 
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      期末小組作業要將 11/3 前往師大美術館時收集到的資料進行可視化，並呈現在擁有 6 面牆的光影走廊中，我們組是將作品被按下「喜歡」的資料進行統整，並著重介紹喜歡數為第一名的作品——蘇憲法的「秋聲荷影」。<br>
+      而我負責的是解說作品模式牆面影片的製作，主牆面以作業 9 為基礎，一樣是虛擬解說員解說作品，而其餘的牆面則是呈現畫作的相關元素，讓觀者在聽解說的同時，有身歷其境的感受。<br>
+      在呈現畫作的相關元素的部分，我參考秋聲荷影的畫面，畫了類似的場景，並且將錄製的繪圖縮時影片作為素材。<br><br>
+      製作牆面影片的過程雖然有點累人，但真的很有趣，實際看到成品也很有成就感。<br>
+      12/29 正式期末報告的時候，雖然因為設備效能問題導致影片的播放出了一點小狀況，後半部分的聲音直接消失，但在旁白穎宣優秀的臨場反應下算是順利的結束了。<br>
+      負責講評的老師也給了我們一定程度的肯定，整體而言我覺得我們組的表現很讚，由衷感謝一起討論的組員們以及超級罩的組長學姊！
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <table>
-        <tr>
-          <th>總分</th>
-          <th>完成後打勾</th>
-          <th>配分</th>
-          <th>分項描述</th>
-        </tr>
-        <tr>
-          <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
-        </tr>
-      </table>
+      360° 模擬影片
+    </div>
+  </div>
+ 
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="https://www.youtube.com/watch?v=BAD1mcADmu8" type="video/mp4">
+      </video>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      師大美術館 光影走廊 Demo 片段
+    </div>
+  </div>
+ 
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Demo.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      解說作品模式 - 正面牆
+    </div>
+  </div>
+ 
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Front.mp4" type="video/mp4">
+      </video>
+      旁白：何穎宣<br>
+      人物模型：<a href="https://www.aplaybox.com/details/model/bOX9JuuwSAEQ">幻塔 - 榴火</a><br>
+      場景：<a href="https://sketchfab.com/3d-models/japanese-traditional-room-69175f3d695d4950b0cae35ecd3294df">Japanese Traditional Room</a>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      解說作品模式 - 背面牆
+    </div>
+  </div>
+ 
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Back.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      解說作品模式 - 斜地板 & 地板
     </div>
   </div>
 
@@ -223,12 +272,32 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <source src="./src/Ground-1.mp4" type="video/mp4">
+      </video>
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Ground.mp4" type="video/mp4">
       </video>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      解說作品模式 - 左面牆 & 右面牆
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Left.mp4" type="video/mp4">
+      </video>
+      <video id="video1" style="width:100%;max-width:100%;" controls="">
+        <source src="./src/Right.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
 
   <!-- ------------------------------------------------>
 
