[fix] Fixed video display problem

--- a/hw10/index.html
+++ b/hw10/index.html
@@ -185,7 +185,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      期末小組作業要將 11/3 前往師大美術館時收集到的資料進行可視化，並呈現在擁有 6 面牆的光影走廊中，我們組是將作品被按下「喜歡」的資料進行統整，並著重介紹喜歡數為第一名的作品——蘇憲法的「秋聲荷影」。<br>
+      期末小組專案要將 11/3 前往師大美術館時收集到的資料進行可視化，並呈現在擁有 6 面牆的光影走廊中，我們組統整了作品被按下「喜歡」的次數，並著重介紹喜歡數為第一名的作品——蘇憲法的「秋聲荷影」。<br>
       而我負責的是解說作品模式牆面影片的製作，主牆面以作業 9 為基礎，一樣是虛擬解說員解說作品，而其餘的牆面則是呈現畫作的相關元素，讓觀者在聽解說的同時，有身歷其境的感受。<br>
       在呈現畫作的相關元素的部分，我參考秋聲荷影的畫面，畫了類似的場景，並且將錄製的繪圖縮時影片作為素材。<br><br>
       製作牆面影片的過程雖然有點累人，但真的很有趣，實際看到成品也很有成就感。<br>
@@ -204,9 +204,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.youtube.com/watch?v=BAD1mcADmu8" type="video/mp4">
-      </video>
+      <iframe src="https://www.youtube.com/embed/BAD1mcADmu8?si=qGf_t55wyu_q47jb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="width: 100%; height: 100vh;"></iframe>
     </div>
   </div>
 
